; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/obs-scripting/extr_obs-scripting-lua.c_on_remove_hotkey.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/obs-scripting/extr_obs-scripting-lua.c_on_remove_hotkey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lua_obs_callback = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [3 x i8] c"id\00", align 1
@OBS_INVALID_HOTKEY_ID = common dso_local global i64 0, align 8
@defer_hotkey_unregister = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @on_remove_hotkey to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @on_remove_hotkey(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.lua_obs_callback*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.lua_obs_callback*
  store %struct.lua_obs_callback* %6, %struct.lua_obs_callback** %3, align 8
  %7 = load %struct.lua_obs_callback*, %struct.lua_obs_callback** %3, align 8
  %8 = getelementptr inbounds %struct.lua_obs_callback, %struct.lua_obs_callback* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = call i32 @calldata_int(i32* %9, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %11 = sext i32 %10 to i64
  store i64 %11, i64* %4, align 8
  %12 = load i64, i64* %4, align 8
  %13 = load i64, i64* @OBS_INVALID_HOTKEY_ID, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %20

15:                                               ; preds = %1
  %16 = load i32, i32* @defer_hotkey_unregister, align 4
  %17 = load i64, i64* %4, align 8
  %18 = inttoptr i64 %17 to i8*
  %19 = call i32 @defer_call_post(i32 %16, i8* %18)
  br label %20

20:                                               ; preds = %15, %1
  ret void
}

declare dso_local i32 @calldata_int(i32*, i8*) #1

declare dso_local i32 @defer_call_post(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
